--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -12,7 +12,7 @@
     <meta name="google-site-verification" content="n5oeuGdxRuZnqwnBcbeTr-0LpV23FwcYYD7K4FHMomc" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico" />
     <!--
