--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -20,6 +20,12 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+
+    <!-- Prefetch from JSON APIs that will be soon called when app boots -->
+    <link rel="preload" href="%PUBLIC_URL%/locales/en/translation.json" as="fetch">
+    <link rel="preload" href="%PUBLIC_URL%/api/v1/keys/GOOGLE_LOGIN_CLIENT_ID" as="fetch">
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -29,6 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    
     <title>COVID CO2 tracker</title>
   </head>
   <body>
