--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -23,8 +23,9 @@
 
 
     <!-- Prefetch from JSON APIs that will be soon called when app boots -->
-    <link rel="preload" href="%PUBLIC_URL%/locales/en/translation.json" as="fetch">
-    <link rel="preload" href="%PUBLIC_URL%/api/v1/keys/GOOGLE_LOGIN_CLIENT_ID" as="fetch">
+    <!-- Disable until cache-control improved. -->
+    <!-- <link rel="preload" href="%PUBLIC_URL%/locales/en/translation.json" as="fetch"> -->
+    <!-- <link rel="preload" href="%PUBLIC_URL%/api/v1/keys/GOOGLE_LOGIN_CLIENT_ID" as="fetch"> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
