experiment with twitter card

--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -7,6 +7,12 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:title" content="The COVID CO2 tracker"/>
+    <meta name="twitter:description" content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."/>
+    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.ico">
+    <meta name="twitter:creator" content="@ariccio" />
+    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="n5oeuGdxRuZnqwnBcbeTr-0LpV23FwcYYD7K4FHMomc" />
@@ -20,12 +26,6 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-
-    <!-- Prefetch from JSON APIs that will be soon called when app boots -->
-    <!-- Disable until cache-control improved. -->
-    <!-- <link rel="preload" href="%PUBLIC_URL%/locales/en/translation.json" as="fetch"> -->
-    <!-- <link rel="preload" href="%PUBLIC_URL%/api/v1/keys/GOOGLE_LOGIN_CLIENT_ID" as="fetch"> -->
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
