change twitter card image

--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -7,12 +7,12 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="cache-control" content="no-cache, no-store, must-revalidate"/>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:title" content="The COVID CO2 tracker"/>
     <meta name="twitter:description" content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."/>
-    <meta name="twitter:image" content="%PUBLIC_URL%/favicon.ico">
+    <meta name="twitter:image" content="%PUBLIC_URL%/respirator-98758_640.png">
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:creator" content="@ariccio" />
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="google-site-verification" content="n5oeuGdxRuZnqwnBcbeTr-0LpV23FwcYYD7K4FHMomc" />
