--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:title" content="The COVID CO2 tracker"/>
     <meta name="twitter:description" content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."/>
     <meta name="twitter:image" content="%PUBLIC_URL%/respirator-98758_640.png">
-    <meta name="twitter:card" content="summary_large_image"/>
+    <meta name="twitter:card" content="summary"/>
     <meta name="twitter:creator" content="@ariccio" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
