--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="twitter:title" content="The COVID CO2 tracker"/>
     <meta name="twitter:description" content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."/>
-    <!-- <meta name="twitter:image" content="%PUBLIC_URL%/respirator-98758_566_for_twitter.png"> -->
+    <meta name="twitter:image" content="%PUBLIC_URL%/respirator-98758_566_for_twitter.png">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:creator" content="@ariccio" />
 
