--- a/co2_client/public/index.html
+++ b/co2_client/public/index.html
@@ -9,8 +9,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="twitter:title" content="The COVID CO2 tracker - An app for the #CO2Guerillas"/>
     <meta name="twitter:description" content="An app for the #CO2Guerillas of the world to record and share their measurements. Let's fight COVID together."/>
-    <meta name="twitter:image" content="%PUBLIC_URL%/respirator-98758_566_for_twitter.png"/>
-    <meta name="twitter:card" content="summary"/>
+    <meta name="twitter:image" content="%PUBLIC_URL%/twitter_respirator.png"/>
+    <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:creator" content="@ariccio" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
